@@ -2,7 +2,7 @@ sg3-utils (1.45-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 04 Jan 2018 11:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 29 Apr 2019 08:00:00 +0200
 
 sg3-utils (1.44-0.1) unstable; urgency=low
 
