@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.45 [20190419] [svn: r819]
+Changelog for sg3_utils-1.45 [20190429] [svn: r820]
   - sg_ses: bug: --page= being overridden when --control
     and --data= also given; fix
   - sg_opcodes: expand MLU (spc5r20)
@@ -24,7 +24,9 @@ Changelog for sg3_utils-1.45 [20190419] [svn: r819]
     - sg_cmds_process_resp(): two arguments removed
     - add ${PACKAGE_VERSION} to '.so' name
   - sg_pt_freebsd: fixes for FreeBSD 12.0 release
-  - scripts/scsi-sg3_id: update rules
+  - scripts: update 54-before-scsi-sg3_id.rules,
+    scsi-enable-target-scan.sh and
+    59-fc-wwpn-id.rules
   - linux: add nanosecond durations when
     SG3_UTILS_LINUX_NANO environment variable given
   - rescan-scsi-bus: widen LUN 0 only scanning
